# recetarios-mama

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.specify/: extensions.yml  feature.json  init-options.json  integration.json
backend/: pyproject.toml  recetarios.spec
backend/src/recetarios/: __main__.py
backend/src/recetarios/api/: app.py  books.py  chapters.py  deps.py  errors.py  images.py  library_status.py  pdf.py  recipes.py  search.py  settings.py  transfer.py
backend/src/recetarios/l10n/: messages.py
backend/src/recetarios/models/: blocks.py  entities.py  markdown.py
backend/src/recetarios/services/: archive.py  library.py  settings.py
backend/src/recetarios/services/legacy_import/: importer.py  mapper.py  parser.py
backend/src/recetarios/services/pdf/: base.py  book_builder.py  recipe_builder.py
backend/src/recetarios/storage/: db.py  images.py  repository.py
backend/tests/: conftest.py  perf_check.py
backend/tests/golden/: test_image_fallback.py  test_legacy_import.py
backend/tests/integration/: test_book_pdf.py  test_books_api.py  test_chapters_api.py  test_images_api.py  test_library_archive.py  test_library_status_api.py  test_recipe_pdf.py  test_recipes_api.py  test_recipes_write_api.py  test_search_api.py  test_settings_api.py
backend/tests/unit/: test_db_version.py  test_legacy_parser.py  test_markdown_helpers.py  test_pdf_table_alignment.py
frontend/: .metadata  README.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
legacy/: b Las setas como ingrediente principal.json  las setas 2 como parte de un guiso.json  (+3 more)
(+112 files in other folders)
