[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recetarios"
version = "0.1.0"
description = "Local backend service for the recetarios-mama recipe management application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "reportlab>=4.2",
    "pillow>=10.3",
    "platformdirs>=4.2",
    "python-multipart>=0.0.9",
    "psutil>=5.9",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.4",
    "pypdf>=4.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
